<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SearchBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/search_bar_background"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cd_search_bar_icon"
        android:src="@drawable/ic_search_outline"
        app:tint="@color/colorOnSurface" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/search_bar_hint"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:paddingVertical="12dp"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/btnCancelSearch"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:alpha="0.54"
        android:contentDescription="@string/cd_clear_search_bar"
        android:paddingHorizontal="16dp"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        app:tint="@color/colorOnSurface"
        tools:visibility="visible" />
</LinearLayout>