<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".features.onboarding.presentation.view.OnboardingFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="50"
        android:src="@drawable/onboarding_img_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/obTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:gravity="center"
        android:text="@string/onboarding_title_1"
        android:textAllCaps="true"
        android:textColor="@color/colorOnSurface"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/obBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text_medium"
        android:gravity="center"
        android:text="@string/onboarding_body_1"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <Button
        android:id="@+id/buttonStart"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_accent_background"
        android:fontFamily="@font/sf_pro_text_medium"
        android:paddingHorizontal="24dp"
        android:text="@string/get_started"
        android:textColor="@color/colorSurface"
        android:textSize="18sp"
        app:rippleColor="@color/colorSurface" />


</LinearLayout>